--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,24 @@
+#前缀相同的配置项，idea自动进行归纳
 debug: false
 
-#前缀相同的配置项，idea自动进行归纳
 server:
   port: 80
   servlet:
     context-path: /
+
 spring:
+  profiles:
+    active: dev
   http:
     encoding:
-      charset: utf-8
-  thymeleaf:
-    cache: false
+      charset: UTF-8
   mvc:
     date-format: yyyy-MM-dd
-
-  jackson:
-    time-zone: GMT+8
-    date-format: yyyy-MM-dd HH:mm:ss
+    jackson:
+      time-zone: GMT+8
+      date-format: yyyy-MM-dd HH:mm:ss
+    datasource:
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      url: jdbc:mysql://localhost:3306/springboot?serverTimezone=GMT%2B8
+      username: root
+      password: Lw@1985105
