springboot2(com.vilin.myspringboot.WebController.java;/templates/employee_info.html;/static/images/404.png;/static/images/500.png): SpringBoot file upload.

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -4,3 +4,4 @@ app.description=\u8FD9\u662F\u4E00\u4E2A\u6BCD\u5A74\u7535\u5546\u7F51\u7AD9
 app.page-size=20
 app.show-advert=true
 app.website=http://www.yangdianjie.com
+app.path=D:/upload/
