--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,3 +22,8 @@ spring:
       url: jdbc:mysql://localhost:3306/springboot?serverTimezone=GMT%2B8
       username: root
       password: Lw@1985105
+  servlet:
+    multipart:
+      max-file-size: 2MB
+      max-request-size: 50MB
+      location: D:/tmp/
